--- a/saleInvoice.html
+++ b/saleInvoice.html
@@ -56,6 +56,9 @@
                         <p class="me-5 p-3">Total</p>
                         <p id="total" class="me-5 p-3">123</p>
                     </div>
+                    <div>
+                        <p id="print">print</p>
+                    </div>
                 </div>
             </div>
         </div>
